--- a/view/find_line - 副本 (2).html
+++ b/view/find_line - 副本 (2).html
@@ -1519,8 +1519,7 @@
               <div class="w-block-b w7">
                 <h3>他的足迹</h3>
                 <div class="leader-zu-img">
-                  <img src="../img/map.jpg" alt="">
-                </div>
+                  <img src="../img/map.jpg" alt=""></div>
                 <p class="leader-intr">
                   这周刚和妈妈去首尔玩儿了几天，趁热打铁把攻略写了。我是个馋嘴猫，先总结一下这一路吃的吧。首先想说的是，大家不要对韩国的美食抱太高的期望，不然真的会很失望。之前在中国和美国吃过很多次韩国菜，很惊异韩国本土吃到的还没有在其他国家吃到的韩国菜好吃，而且我们去的很多餐厅还是网友们大力推荐的。我妈妈的一句话评语是：“大长今真是太能编了！”
                 </p>
