--- a/css/manager.css
+++ b/css/manager.css
@@ -205,19 +205,23 @@
 
 .afa-m-imgshow {
   background: #ffffff;
-  padding: 5px 0; }
+  padding: 5px 8px; }
   .afa-m-imgshow .list {
     margin-right: -8px; }
     .afa-m-imgshow .list .item {
       float: left;
       margin-right: 8px;
-      width: 234px; }
+      width: 230px; }
     .afa-m-imgshow .list .img {
       display: block;
       height: 150px;
       line-height: 150px;
       vertical-align: middle;
       text-align: center;
+      -moz-border-radius: 5px;
+      -webkit-border-radius: 5px;
+      border-radius: 5px;
+      overflow: hidden;
       -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
       box-sizing: border-box;
